Forzar redeploy GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Pet Shop | Productos, Alimentos y Accesorios para Mascotas</title>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
  <link rel="stylesheet" href="style/style.css" />
- <link rel="canonical" href="https://TUSITIO.COM/" />
+ <link rel="canonical" href="https://proyectopetshop.rf.gd/index.html" />
 
 </head>
 <body class="pagina-index">
