Forzar deploy tradicional en GitHub Pages

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="card-items-content">
     <h3 class="mt-2">Gemon gato adulto 7kg</h3>
     <p class="card-items-precio"><span>$2440</span> $2249</p>
-    <p class="card-items-descripcion">Ideal para gatos adultos exigentes.</p>
+    <p class="card-items-descripcion">Ideal para gatos exigentes.</p>
     <a class="card-items-btn"
        href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Gemon%20gato%20adulto%207kg"
        target="_blank"
